Updating request body textarea placeholder text, removing deprecated (commented out) html

--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
 							<div class="field">
 								<label class="label">Body</label>
 								<p class="control">
-									<textarea class="textarea" placeholder="Enter JSON request body here"></textarea>
+									<textarea class="textarea" placeholder="JSON is required"></textarea>
 								</p>
 							</div>
 
@@ -118,64 +118,3 @@
 
 </body>
 </html>
-
-<!--
-<article>
-	<h2 class="overflow">{{url}}</h2>
-	<form>
-		<fieldset>
-			<label for="formats">Format</label>
-			<select id="formats">
-				{{formats}}
-			</select>
-		</fieldset>
-	</form>
-	<div>
-		<div class="float">
-			<table>
-				<thead>
-				<tr>
-					<th>Header</th>
-					<th>Value</th>
-				</tr>
-				</thead>
-				<tbody>
-				{{headers}}
-				</tbody>
-			</table>
-		</div>
-		<div id="io" class="float">
-			<nav class="hidden">
-				<ul>
-					<li><a class="active" data-type="code" title="View response">Response</a></li>
-					<li><a data-type="form" title="Send a request">Send Request</a></li>
-				</ul>
-			</nav>
-			<div>
-				<div class="code">
-					<pre><code>{{body}}</code></pre>
-				</div>
-				<div class="form hidden">
-					<form>
-						<label for="methods">Method</label>
-						<select id="methods">
-							{{methods}}
-						</select>
-						<fieldset id="body">
-							<textarea placeholder="JSON is required"></textarea>
-						</fieldset>
-						<button type="submit">Submit</button> <button type="reset">Reset</button>
-						<div id="result" class="hidden">
-							<h3>Result</h3>
-							<div class="code">
-								<pre><code></code></pre>
-							</div>
-						</div>
-					</form>
-					<div id="allow" class="hidden">{{allow}}</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
--->
