Wiring up `prettify()` (WIP)

--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@
 						<div class="column">
 							<div class="box">
 								<code class="is-marginless is-paddingless">
-									<pre>{{body}}</pre>
+									<pre id="body">{{body}}</pre>
 								</code>
 							</div>
 						</div>
