--- a/www/index.html
+++ b/www/index.html
@@ -86,12 +86,13 @@
 							<div class="field">
 								<label class="label">Body</label>
 								<p class="control">
-									<textarea class="textarea" placeholder="JSON is required"></textarea>
+									<textarea class="textarea" name="input" placeholder="Enter request body here"></textarea>
 								</p>
 							</div>
 
 							<div class="field is-grouped">
 								<p class="control">
+									<input type="hidden" name="x-csrf-token" value="{{csrf}}" />
 									<button type="submit" class="button is-primary is-disabled">Submit</button>
 								</p>
 							</div>
