Wiring up the response modal

--- a/www/index.html
+++ b/www/index.html
@@ -114,10 +114,16 @@
 <div id="result" class="modal">
 	<div class="modal-background"></div>
 	<div class="modal-content">
-		<div class="loading box has-text-centered">
-			<div class="button is-large is-white is-loading"></div>
+		<div class="box">
+			<div class="loading has-text-centered">
+				<div class="button is-large is-white is-loading"></div>
+			</div>
+			<div class="body dr-hidden">
+				<code class="is-marginless is-paddingless">
+					<pre></pre>
+				</code>
+			</div>
 		</div>
-		<div class="body dr-hidden"></div>
 	</div>
 	<button id="close" class="modal-close"></button>
 </div>
