--- a/template.html
+++ b/template.html
@@ -92,7 +92,7 @@
 
 							<div class="field is-grouped">
 								<p class="control">
-									<button type="submit" class="button is-primary is-disabled">Submit</button>
+									<button type="submit" class="button is-primary">Submit</button>
 								</p>
 							</div>
 						</form>
