Hiding headers behind a preference, fixes #85

--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@
 						</p>
 					</div>
 					<div class="columns">
-						<div class="column is-hidden-mobile">
+						<div class="headers column is-hidden-mobile">
 							<div class="box">
 								<table class="table">
 									<thead>
