Removing transpiled & minified router

--- a/template.html
+++ b/template.html
@@ -131,7 +131,7 @@
 <div id="allow" class="dr-hidden">{{allow}}</div>
 <div id="csrf" class="dr-hidden">{{csrf}}</div>
 
-<script type="application/javascript" src="/assets/js/dom-router.min.js"></script>
+<script type="application/javascript" src="/assets/js/dom-router.js"></script>
 <script type="application/javascript" src="/assets/js/app.js"></script>
 
 </body>
