Updating template.html, caching `sfolder` & `sregex` for `config.static` handling

--- a/template.html
+++ b/template.html
@@ -105,8 +105,8 @@
 <footer class="footer">
 	<div class="container">
 		<div class="content has-text-centered">
-			<p><a href="http://avoidwork.com" title="Visit avoidwork.com"><img src="/assets/img/avoidwork.svg" class="avoidwork logo" /></a><br>
-				<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tensō</a> {{version}}</p>
+			<p><a href="https://avoidwork.com" title="Visit avoidwork.com"><img src="/assets/img/avoidwork.svg" class="avoidwork logo" /></a><br>
+				<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tenso</a> {{version}}</p>
 		</div>
 	</div>
 </footer>
