Updating bulma, template.html, & SCSS/CSS

--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
 	<title>{{title}}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/bulma.css" media="print,screen">
+	<link rel="stylesheet" type="text/css" href="/assets/css/bulma.min.css" media="print,screen">
 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css" media="print,screen">
 	<link rel="shortcut icon" href="/assets/img/favicon.png">
 </head>
@@ -33,7 +33,7 @@
 		</div>
 	</div>
 	<div class="content">
-			<div class="container">
+		<div class="container">
 				<div id="response" class="dr-hidden">
 					<div class="field">
 						<label class="label">Formats</label>
