Adding a dark mode for the HTML renderer

--- a/www/template.html
+++ b/www/template.html
@@ -107,7 +107,8 @@
 		<div class="container">
 			<div class="content has-text-centered">
 				<p><a href="https://avoidwork.com" title="Visit avoidwork.com"><img src="/assets/img/avoidwork.svg" class="avoidwork logo" /></a><br>
-					<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tenso</a> {{version}}</p>
+					<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tenso</a> {{version}}<br>
+				    <a id="viewModeToggle" class="is-size-7">Dark</a></p>
 			</div>
 		</div>
 	</footer>
